--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-group=org.polyphenydb
+group=org.polypheny
 name=polypheny-fram
 version_major=0
 version_minor=1
