--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        java: [8, 11, 13]
+        java: [8, 11]
     steps:
     - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
@@ -32,7 +32,7 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        java: [8, 11, 13]
+        java: [8, 11]
     steps:
     - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
