Giving Gradle more memory
See also https://stackoverflow.com/questions/53854198/jvm-space-exhausted-when-building-a-project-through-gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ version_patch=0
 version_build=
 mainClass=org.polypheny.fram.standalone.Main
 moduleMainClass=org.polypheny.fram.DataDistributionUnitImpl
+org.gradle.jvmargs=-Xms512m -Xmx4g -XX:+CMSClassUnloadingEnabled
