--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -147,8 +147,8 @@ standalone {
 
         ##
         # The step size (reporting frequency, max decaying) to use.
-        # The default is 1 minute.
-        step = 1 second
+        # The default is "1 minute".
+        step = "1 second"
 
         ##
         # JMX domain under which to publish metrics.
@@ -166,8 +166,8 @@ standalone {
 
         ##
         # The step size (reporting frequency) to use.
-        # The default is 1 minute.
-        step = 1 second
+        # The default is "1 minute".
+        step = "1 second"
 
         ##
         # The number of threads to use with the scheduler.
@@ -240,8 +240,8 @@ standalone {
 
         ##
         # The step size to use in computing windowed statistics like max. To get the most out of these statistics, align the step interval to be close to your scrape interval.
-        # The default is 1 minute.
-        step = 1 second
+        # The default is "1 minute".
+        step = "1 second"
 
         ##
         # true if meter descriptions should be sent to Prometheus. Turn this off to minimize the amount of data sent on each scrape.
