--- a/build.gradle
+++ b/build.gradle
@@ -124,7 +124,7 @@ lombok {
 }
 
 
-def calciteVersion = '1.19.0' /* KEEP THIS VERSION */
+def calciteVersion = '1.22.0' /* KEEP THIS VERSION */
 def avaticaVersion = '1.16.0-POLYPHENY-SNAPSHOT' /* Requires the repository https://nexus.dmi.unibas.ch/repository/maven2/ */
 def log4jVersion = '2.12.1'
 
@@ -178,15 +178,13 @@ dependencies {
 
     //
     // ///// //// /// // /
-    // TESTING (Eclipse Public License 1.0)
-    testCompile group: 'junit', name: 'junit', version: '4.13'
+    // TESTING (Eclipse Public License 2.0)
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.6.0'
     // Apache Calcite Avatica (Apache 2.0)
     testCompile group: 'org.apache.calcite.avatica', name: 'avatica-core', version: avaticaVersion
     // Apache Calcite (Apache 2.0)
     testCompile group: 'org.apache.calcite', name: 'calcite-core', version: calciteVersion
     testCompile group: 'org.apache.calcite', name: 'calcite-core', version: calciteVersion, classifier: 'tests'
-    testCompile group: 'org.apache.calcite', name: 'calcite-server', version: calciteVersion
-    testCompile group: 'org.apache.calcite', name: 'calcite-server', version: calciteVersion, classifier: 'tests'
 
     //
     // ///// //// /// // /
@@ -249,7 +247,7 @@ jar {
         attributes 'Build': rootProject.version_build
     }
 
-    exclude 'log4j2.properties', 'sample-application.conf'
+    exclude 'log4j2.properties', 'application.conf', 'sample-application.conf'
 }
 
 
@@ -270,7 +268,7 @@ task standaloneJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.Shadow
     configurations = [project.configurations.runtime]
     configurations.addAll([project.configurations.standaloneCompile])
 
-    exclude 'META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
+    exclude 'META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'application.conf'
 }
 
 // Module JAR which bundles all required dependencies to run in the "Polypheny-DB" context
@@ -292,7 +290,7 @@ task pdbModuleJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJ
     configurations = [project.configurations.runtime]
     configurations.addAll([project.configurations.pdbModuleCompile])
 
-    exclude 'META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
+    exclude 'META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'application.conf'
 }
 
 
