--- a/build.gradle
+++ b/build.gradle
@@ -184,7 +184,7 @@ dependencies {
     testImplementation group: 'org.apache.calcite', name: 'calcite-core', version: calciteVersion
     testImplementation group: 'org.apache.calcite', name: 'calcite-core', version: calciteVersion, classifier: 'tests'
     //
-    testImplementation group: 'org.polypheny', name: 'polypheny-jdbc-driver', version: '1.3' /* Requires the repository https://nexus.dmi.unibas.ch/repository/maven2/ */
+    testImplementation group: 'org.polypheny', name: 'polypheny-jdbc-driver', version: '1.4-SNAPSHOT' /* Requires the repository https://nexus.dmi.unibas.ch/repository/maven2/ */
 
     //
     // ///// //// /// // /
@@ -621,11 +621,8 @@ task zipAll(group: 'distribution') {
 
 publishing {
     publications {
-        maven(MavenPublication) {
+        "${project.name}"(MavenPublication) {
             from components.java
-            artifact jar
-            artifact source: sourcesJar, classifier: 'sources', extension: 'jar'
-            artifact source: javadocJar, classifier: 'javadoc', extension: 'jar'
             pom {
                 inceptionYear = '2016'
                 licenses {
@@ -637,11 +634,24 @@ publishing {
                 scm {
                     url = 'https://github.com/polypheny/Polypheny-FRAM.git'
                 }
+                withXml {
+                    asNode().getAt('dependencies').each /*safe, since there is only one*/ { dependenciesNode ->
+                        configurations.standaloneImplementation.allDependencies.stream()
+                                .filter { !configurations.implementation.dependencies.contains(it) }
+                                .each {
+                                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                                    dependencyNode.appendNode('groupId', it.group)
+                                    dependencyNode.appendNode('artifactId', it.name)
+                                    dependencyNode.appendNode('version', it.version)
+                                    dependencyNode.appendNode('scope', 'runtime')
+                                }
+                    }
+                }
             }
         }
     }
 }
-task generatePom(group: 'publishing', dependsOn: 'generatePomFileForMavenPublication')
+task generatePom(group: 'publishing', dependsOn: "generatePomFileFor${project.name.capitalize()}Publication")
 
 
 sonarqube {
