[WiP] Rework of the execution pipeline
[WIP] Global catalog

[WiP] Refactoring of the Local/RemoteNode abstraction

[WiP] Add PASS_THOUGH protocol

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -33,9 +33,9 @@ cluster {
 # The configurations belonging to the FRAM protocol pipeline
 fram {
     ##
-    # The default protocol. One of "passthrough", "rowa".
-    # The default is "passthrough".
-    defaultProtocol = "passthrough"
+    # The default protocol. One of "PASS_THROUGH", "ROWA", "HASH_FRAGMENTATION".
+    # The default is "PASS_THROUGH".
+    defaultProtocol = "PASS_THROUGH"
 }
 
 
@@ -59,6 +59,8 @@ standalone {
 
 
     datastore {
+        class = "org.polypheny.fram.standalone.HSQLDB"
+
         jdbc {
             ##
             # The port of the underlying data store.
