--- a/build.gradle
+++ b/build.gradle
@@ -109,9 +109,14 @@ configurations {
 
     compileClasspath.extendsFrom compileOnly, implementation, standaloneImplementation, pdbModuleImplementation
     runtimeClasspath.extendsFrom implementation, runtimeOnly, runtime, standaloneImplementation
-    
+
     testCompileClasspath.extendsFrom testCompileOnly, testImplementation, standaloneImplementation, pdbModuleImplementation
     testRuntimeClasspath.extendsFrom testRuntimeOnly, testRuntime, testImplementation, standaloneImplementation
+
+    all {
+        // Check for updates every build
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
 }
 
 
@@ -123,7 +128,7 @@ repositories {
 
 
 def calciteVersion = '1.22.0' /* KEEP THIS VERSION */
-def avaticaVersion = '1.16.0-POLYPHENY-SNAPSHOT' /* Requires the repository https://nexus.dmi.unibas.ch/repository/maven2/ */
+def avaticaVersion = '1.16.1-POLYPHENY-SNAPSHOT' /* Requires the repository https://nexus.dmi.unibas.ch/repository/maven2/ */
 def log4jVersion = '2.12.1'
 
 
@@ -136,7 +141,8 @@ dependencies {
     // ///// //// /// // /
     // STANDALONE DDBMS
     // Apache Calcite Avatica (Apache 2.0)
-    standaloneImplementation group: 'org.apache.calcite.avatica', name: 'avatica-server', version: avaticaVersion
+    standaloneImplementation group: 'org.apache.calcite.avatica', name: 'avatica-core', version: avaticaVersion, changing: true
+    standaloneImplementation group: 'org.apache.calcite.avatica', name: 'avatica-server', version: avaticaVersion, changing: true
     // Apache Calcite (Apache 2.0)
     standaloneImplementation group: 'org.apache.calcite', name: 'calcite-core', version: calciteVersion
     standaloneImplementation group: 'org.apache.calcite', name: 'calcite-server', version: calciteVersion
@@ -172,6 +178,8 @@ dependencies {
     implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.5.1'
     // Typesafe Config - Configuration library for JVM languages (Apache 2.0)
     implementation group: 'com.typesafe', name: 'config', version: '1.4.0'
+    // Vavr - object-functional library (Apache 2.0)
+    implementation group: 'io.vavr', name: 'vavr', version: '0.10.2'
 
 
     //
@@ -179,11 +187,11 @@ dependencies {
     // TESTING (Eclipse Public License 2.0)
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.6.2'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-library', version: '2.2'
-    // Apache Calcite Avatica (Apache 2.0)
-    testImplementation group: 'org.apache.calcite.avatica', name: 'avatica-core', version: avaticaVersion
     // Apache Calcite (Apache 2.0)
     testImplementation group: 'org.apache.calcite', name: 'calcite-core', version: calciteVersion
     testImplementation group: 'org.apache.calcite', name: 'calcite-core', version: calciteVersion, classifier: 'tests'
+    //
+    testImplementation group: 'org.polypheny', name: 'polypheny-jdbc-driver', version: '1.4-SNAPSHOT', changing: true /* Requires the repository https://nexus.dmi.unibas.ch/repository/maven2/ */
 
     //
     // ///// //// /// // /
@@ -230,10 +238,10 @@ compileJavacc {
     inputDirectory = file("${generatedDir}/main/fmpp/javacc")
     outputDirectory = file("${generatedDir}/main/javacc")
     arguments = [
-            LOOKAHEAD: '2', // Default: '1'
-            FORCE_LA_CHECK: 'false', // Default: 'false'
+            LOOKAHEAD             : '2', // Default: '1'
+            FORCE_LA_CHECK        : 'false', // Default: 'false'
             CHOICE_AMBIGUITY_CHECK: '2', // Default: '2'
-            OTHER_AMBIGUITY_CHECK: '1', // Default: '1'
+            OTHER_AMBIGUITY_CHECK : '1', // Default: '1'
     ]
 }
 
@@ -249,7 +257,6 @@ jjdoc {
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
-
 
 
 jar {
@@ -623,9 +630,6 @@ publishing {
     publications {
         "${project.name}"(MavenPublication) {
             from components.java
-            artifact jar
-            artifact source: sourcesJar, classifier: 'sources', extension: 'jar'
-            artifact source: javadocJar, classifier: 'javadoc', extension: 'jar'
             pom {
                 inceptionYear = '2016'
                 licenses {
@@ -636,6 +640,19 @@ publishing {
                 }
                 scm {
                     url = 'https://github.com/polypheny/Polypheny-FRAM.git'
+                }
+                withXml {
+                    asNode().getAt('dependencies').each /*safe, since there is only one*/ { dependenciesNode ->
+                        configurations.standaloneImplementation.allDependencies.stream()
+                                .filter { !configurations.implementation.dependencies.contains(it) }
+                                .each {
+                                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                                    dependencyNode.appendNode('groupId', it.group)
+                                    dependencyNode.appendNode('artifactId', it.name)
+                                    dependencyNode.appendNode('version', it.version)
+                                    dependencyNode.appendNode('scope', 'runtime')
+                                }
+                    }
                 }
             }
         }
