--- a/build.gradle
+++ b/build.gradle
@@ -161,10 +161,11 @@ dependencies {
     // COMPILE (Required for both runtime environments)
     //
     // Apache Commons (Apache 2.0)
-    implementation group: 'commons-transaction', name: 'commons-transaction', version: '1.2'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.14'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation group: 'commons-transaction', name: 'commons-transaction', version: '1.2'
     // Google GUAVA (Apache 2.0)
     implementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
     // Byte Units (Apache 2.0)
@@ -283,6 +284,7 @@ task standaloneJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.Shadow
         inheritFrom jar.manifest
         attributes 'Main-Class': project.properties['mainClass']
         attributes 'Class-Path': '../config/ ../plugins/ ./config/ ./plugins/'
+        attributes 'Multi-Release': true
     }
 
     from(project.convention.getPlugin(JavaPluginConvention).sourceSets.main.output)
